# ms-meeting-transcript-extractor

./: .gitignore  LICENSE  PDD.md  README.md  TODO.md  opencode.json  pyproject.toml
.github/skills/teams-meeting-recap/: SKILL.md
.github/skills/teams-meeting-recap/references/: troubleshooting.md
src/ms_meetings/: browser.py  cli.py  models.py  teams_transcript.py
tests/: test_teams_transcript.py
