[project]
name = "ms-meetings"
version = "0.1.0"
description = "Extract finalized Microsoft Teams transcripts using the main Chrome profile."
readme = "README.md"
authors = [
    { name = "jing", email = "jing@na.com" }
]
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4,<5",
    "lxml>=5.4.0,<6",
    "playwright>=1.53.0,<2",
]

[project.scripts]
ms-meetings = "ms_meetings.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
